# JPAC2_Editor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  buffer.cpp  buffer.hpp  common_types.hpp  jpc.cpp  jpc.hpp  jpcToJson.cpp  jpcToJson.hpp  jsonBase.cpp  jsonToJpc.cpp  jsonToJpc.hpp  main.cpp  rustfmt.toml
include/: buffer.hpp  jpc.hpp  jpcToJson.hpp  jsonBase.hpp  jsonToJpc.hpp
src/: bti.rs  buffer.cpp  jpc.cpp  jpcToJson.cpp  jsonBase.cpp  jsonToJpc.cpp  main.cpp  main.rs  ui_helpers.rs
src/jpa/: mod.rs  tex.rs
src/jpa/jpac2_10/: bem.rs  bsp.rs  etx.rs  kfa.rs  mod.rs  resource.rs  ssp.rs  tdb.rs
src/jpa/jpac2_11/: bem.rs  bsp.rs  esp.rs  etx.rs  fld.rs  kfa.rs  mod.rs  resource.rs  ssp.rs  tdb.rs  tex.rs
ui/: basicGUI.ui  ui_basicGUI.h
