[package]
name = "jpac2_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
binrw = "0.13.3"
byteorder = "1.5.0"
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = "0.25.0"
env_logger = "0.11.0"
rfd = "0.13.0"
serde = "1.0.195"
serde_json = "1.0.113"
thiserror = "1.0.56"
to-binary = "0.4.0"
